--- a/TPC_Gonzalez_Jesus/SistemaDeTickets/Site.Master
+++ b/TPC_Gonzalez_Jesus/SistemaDeTickets/Site.Master
@@ -13,16 +13,17 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
-    <webopt:bundlereference runat="server" path="~/Content/css" />
+    <%--<webopt:bundlereference runat="server" path="~/Content/css" />--%>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
-    <link rel="" href="Style.css"/>
+    <link rel="author" href="Style.css"/>
+    
 
 </head>
 <body>
 <header>
     <div class="container">
-     <nav class="navbar navbar-light bg-light">
+     <nav class="navbar navbar-light bg-light" style="margin: 30px 10px">
             <a class="navbar-brand">TICKET IT</a>
                 <form class="form-inline" >
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -41,7 +42,5 @@
                 <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
             </footer>
         </div>
-
-    
 </body>
 </html>
