--- a/TPC_Gonzalez_Jesus/SistemaDeTickets/Site.Master
+++ b/TPC_Gonzalez_Jesus/SistemaDeTickets/Site.Master
@@ -16,7 +16,7 @@
     <%--<webopt:bundlereference runat="server" path="~/Content/css" />--%>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
-    <link rel="author" href="Style.css"/>
+    <link rel="stylesheet" href="Style.css"/>
     
 
 </head>
