--- a/TPC_Gonzalez_Jesus/SistemaDeTickets/Site.Master
+++ b/TPC_Gonzalez_Jesus/SistemaDeTickets/Site.Master
@@ -33,7 +33,7 @@
 </header>
 
       
-        <div class="container body-content">
+        <div class="body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
