--- a/TPC_Gonzalez_Jesus/SistemaDeTickets/Site.Master
+++ b/TPC_Gonzalez_Jesus/SistemaDeTickets/Site.Master
@@ -30,7 +30,7 @@
             <hr />
 
             <footer>
-                <p style="text-align:center">&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
+                <p style="text-align:center">&copy; <%: DateTime.Now.Year %> - Ticket IT - Prog 3</p>
             </footer>
         </div>
 </body>
